--- a/2.Project_Your_Personal_Website/index.html
+++ b/2.Project_Your_Personal_Website/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <div class="this-is-div-1">
+    <img src="williamjiamin_w.png" alt="williamjiamin" width="100px" height="100px">
     <p class="this-is-p-1"><span>Williamjiamin's</span> website website website website </p>
 
 </div>
@@ -16,36 +17,6 @@
     <p>I am an investment banker for 10 years.And now I am a freelancer developer and VC investor.</p>
 </div>
 <div class="this-is-div-3">
-    <div class="block-1"></div>
-    <div class="block-2"></div>
-    <div class="block-3"></div>
-    <div class="block-4"></div>
-    <div class="block-5"></div>
 </div>
-
-
-<h1>This is just some dummy data</h1>
-<h1>This is just some dummy data</h1>
-<h1>This is just some dummy data</h1>
-<h1>This is just some dummy data</h1>
-<h1>This is just some dummy data</h1>
-<h1>This is just some dummy data</h1>
-<h1>This is just some dummy data</h1>
-<h1>This is just some dummy data</h1>
-<h1>This is just some dummy data</h1>
-<h1>This is just some dummy data</h1>
-<h1>This is just some dummy data</h1>
-<h1>This is just some dummy data</h1>
-<h1>This is just some dummy data</h1>
-<h1>This is just some dummy data</h1>
-<h1>This is just some dummy data</h1>
-<h1>This is just some dummy data</h1>
-<h1>This is just some dummy data</h1>
-<h1>This is just some dummy data</h1>
-<h1>This is just some dummy data</h1>
-<h1>This is just some dummy data</h1>
-<h1>This is just some dummy data</h1>
-<h1>This is just some dummy data</h1>
-<h1>This is just some dummy data</h1>
 </body>
 </html>
