--- a/2.Project_Your_Personal_Website/index.html
+++ b/2.Project_Your_Personal_Website/index.html
@@ -9,14 +9,20 @@
 <body>
 <div class="this-is-div-1">
     <img src="williamjiamin_w.png" alt="williamjiamin" width="100px" height="100px">
-    <p class="this-is-p-1"><span>Williamjiamin's</span> website website website website </p>
-
+    <h1>Williamjiamin's Website</h1>
+    <img src="william_guitar.png" alt="william_guitar" width="50px" height="100px">
+    <img src="slogan.png" alt="slogan" width="500px" height="250px">
+    <img src="william_spaceship.png" alt="william_spaceship" width="50px" height="100px">
+    <p>Hello, Everyone! My name is Williamjiamin from lexueoude.com</p>
 </div>
+
+
 <div class="this-is-div-2">
-    <h1>Hello, Everyone! My name is Williamjiamin from lexueoude.com</h1>
-    <p>I am an investment banker for 10 years.And now I am a freelancer developer and VC investor.</p>
 </div>
 <div class="this-is-div-3">
 </div>
+
+
+
 </body>
 </html>
