--- a/2.Project_Your_Personal_Website/index.html
+++ b/2.Project_Your_Personal_Website/index.html
@@ -10,9 +10,9 @@
 <div class="this-is-div-1">
     <img src="williamjiamin_w.png" alt="williamjiamin" width="100px" height="100px">
     <h1>Williamjiamin's Website</h1>
-    <img src="william_guitar.png" alt="william_guitar" width="50px" height="100px">
+    <img class="guitar" src="william_guitar.png" alt="william_guitar" width="50px" height="100px">
     <img src="slogan.png" alt="slogan" width="500px" height="250px">
-    <img src="william_spaceship.png" alt="william_spaceship" width="50px" height="100px">
+    <img class="spaceship" src="william_spaceship.png" alt="william_spaceship" width="50px" height="100px">
     <p>Hello, Everyone! My name is Williamjiamin from lexueoude.com</p>
 </div>
 
