--- a/2.Project_Your_Personal_Website/index.html
+++ b/2.Project_Your_Personal_Website/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
 <div class="this-is-div-1">
-    <img src="williamjiamin_w.png" alt="williamjiamin" width="100px" height="100px">
-    <h1>Williamjiamin's Website</h1>
+    <img src="williamjiamin_w.png" alt="williamjiamin" width="200px" height="200px">
+    <h1 class="title">Williamjiamin's Website</h1>
     <img class="guitar" src="william_guitar.png" alt="william_guitar" width="50px" height="100px">
-    <img src="slogan.png" alt="slogan" width="500px" height="250px">
+    <img src="slogan.png" alt="slogan" width="1000px" height="500px">
     <img class="spaceship" src="william_spaceship.png" alt="william_spaceship" width="50px" height="100px">
     <p>Hello, Everyone! My name is Williamjiamin from lexueoude.com</p>
 </div>
