--- a/2.Project_Your_Personal_Website/index.html
+++ b/2.Project_Your_Personal_Website/index.html
@@ -8,17 +8,36 @@
 </head>
 <body>
 <div class="this-is-div-1">
-    <img src="williamjiamin_w.png" alt="williamjiamin" width="200px" height="200px">
+    <img src="image/williamjiamin_w.png" alt="williamjiamin" width="200px" height="200px">
     <h1 class="title">Williamjiamin's Website</h1>
-    <img class="guitar" src="william_guitar.png" alt="william_guitar" width="50px" height="100px">
-    <img src="slogan.png" alt="slogan" width="1000px" height="500px">
-    <img class="spaceship" src="william_spaceship.png" alt="william_spaceship" width="50px" height="100px">
-    <p>Hello, Everyone! My name is Williamjiamin from lexueoude.com</p>
+    <img class="guitar" src="image/william_guitar.png" alt="william_guitar" width="50px" height="100px">
+    <img src="image/slogan.png" alt="slogan" width="1000px" height="500px">
+    <img class="spaceship" src="image/william_spaceship.png" alt="william_spaceship" width="50px" height="100px">
 </div>
 
 
 <div class="this-is-div-2">
+    <h1 class="title">My Skill Set</h1>
+    <div class="computer-skill">
+        <img class="computer_img" src="image/computer2.gif" alt="computer" width="250" height="200">
+        <h2>I am Computer Scientist & Quantitative Analyst</h2>
+        <p>I am a CFA, FRM, CPA, CIA , CCSA,Computer Scientist & Quantitative Analyst. I currently do a little bit of VC investing to help young people to get started.</p>
+    </div>
+    <div class="music-skill">
+        <img class="music_img" src="image/guitar.gif" alt="guitar" width="250" height="250">
+        <h2>I make music and collect & remix sound.</h2>
+        <p>I love music. I was once in a band. Now I write music mainly for the project I invest and collect&remix sound in my spare time.</p>
+    </div>
+    <div class="art-skill">
+        <img class="painting_img" src="image/painting3.gif" alt="painting" width="250" height="250">
+        <h2>I make digital arts / 3D models / animation / games</h2>
+        <p>I make digital arts that mimic the real world or create something out from nothing. And make some games depend on it</p>
+    </div>
+
+
 </div>
+
+
 <div class="this-is-div-3">
 </div>
 
