--- a/2.Project_Your_Personal_Website/index.html
+++ b/2.Project_Your_Personal_Website/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Williamjiamin's Personal Website</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
+
+
 <body>
-<div class="this-is-div-1">
+<div class="title-section">
     <img src="image/williamjiamin_w.png" alt="williamjiamin" width="200px" height="200px">
     <h1 class="title">Williamjiamin's Website</h1>
     <img class="guitar" src="image/william_guitar.png" alt="william_guitar" width="50px" height="100px">
@@ -15,33 +18,47 @@
     <img class="spaceship" src="image/william_spaceship.png" alt="william_spaceship" width="50px" height="100px">
 </div>
 
+<hr>
 
-<div class="this-is-div-2">
+<div class="skill-section">
     <h1 class="title">My Skill Set</h1>
     <div class="computer-skill">
         <img class="computer_img" src="image/computer2.gif" alt="computer" width="250" height="200">
         <h2>I am Computer Scientist & Quantitative Analyst</h2>
-        <p>I am a CFA, FRM, CPA, CIA , CCSA,Computer Scientist & Quantitative Analyst. I currently do a little bit of VC investing to help young people to get started.</p>
+        <p>I am a CFA, FRM, CPA, CIA , CCSA,Computer Scientist & Quantitative Analyst. I currently do a little bit of VC
+            investing to help young people to get started.</p>
     </div>
     <div class="music-skill">
-        <img class="music_img" src="image/guitar.gif" alt="guitar" width="250" height="250">
+        <img class="music_img" src="image/guitar.gif" alt="guitar" width="200" height="200">
         <h2>I make music and collect & remix sound.</h2>
-        <p>I love music. I was once in a band. Now I write music mainly for the project I invest and collect&remix sound in my spare time.</p>
+        <p>I love music. I was once in a band. Now I write music mainly for the project I invest and collect&remix sound
+            in my spare time.</p>
     </div>
     <div class="art-skill">
         <img class="painting_img" src="image/painting3.gif" alt="painting" width="250" height="250">
         <h2>I make digital arts / 3D models / animation / games</h2>
-        <p>I make digital arts that mimic the real world or create something out from nothing. And make some games depend on it</p>
+        <p>I make digital arts that mimic the real world or create something out from nothing. And make some games
+            depend on it</p>
     </div>
-
-
 </div>
 
+<hr>
 
-<div class="this-is-div-3">
+<div class="contact-me-section">
+    <h1 class="title">More of My Work</h1>
+    <h2 class="contact-me-info">If you are interested in my work , you can contact me by clicking the 'contact me':</h2>
+    <a class="btn" href="mailto:williamjiamin@lexueoude.com">CONTACT ME</a>
 </div>
 
+<hr>
 
+<div class="footer-section">
+    <a class="footer-more-info" href="https://www.lexueoude.com">Official Website</a>
+    <a class="footer-more-info" href="https://www.github.com/williamjiamin">Current Projects</a>
+    <a class="footer-more-info" href="https://www.github.com/williamjiamin">Archived Works</a>
+    <a class="terms-and-conditions" href="">Terms and Conditions</a>
+    <a class="copyright" href="https://www.lexueoude.com">© williamjiamin @ lexueoude.com 乐学偶得® </a>
+</div>
 
 </body>
 </html>
